--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
+            android:name=".PresentationApp"
             tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".mvp.view.PopularMoviesActivity">
             <intent-filter>
