--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ android {
 }
 
 dependencies {
+    def anko_version = "0.10.8"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -32,10 +34,21 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation "com.google.dagger:dagger:2.23.2"
     implementation "com.google.dagger:dagger-android-support:2.22.1"
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+
+    // Anko Layouts
+    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+
+
+    // Coroutine listeners for Anko Layouts
+    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
 
     kapt "com.google.dagger:dagger-compiler:2.22.1"
 
