--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:name=".PresentationApp" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".mvp.view.PopularMoviesActivity">
+        <activity android:name=".ui.movies.PopularMoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
