--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ release/
 
 # Gradle files
 .gradle/
+.gradle/*.lock
 build/
 
 # Local configuration file (sdk path, etc)
@@ -36,6 +37,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
