--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            android:name=".util.PresentationApp" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.movies.PopularMoviesActivity">
+            android:name=".PresentationApp" tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.example.presentation.ui.movies.PopularMoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
