--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation "com.google.dagger:dagger:2.23.2"
     implementation "com.google.dagger:dagger-android-support:2.22.1"
