--- a/movie/build.gradle
+++ b/movie/build.gradle
@@ -32,14 +32,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "com.google.dagger:dagger:2.23.2"
     implementation "com.google.dagger:dagger-android-support:2.22.1"
 
-    kapt "com.google.dagger:dagger-compiler:2.22.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha04"
+
+    kapt "com.google.dagger:dagger-compiler:2.23.1"
 
     kapt "com.google.dagger:dagger-android-processor:2.22.1"
 
