--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "me.ivann.movie"
         minSdkVersion 27
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -28,21 +25,28 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':movie')
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation "com.google.dagger:dagger:2.23.2"
-    implementation "com.google.dagger:dagger-android-support:2.22.1"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
+
+    implementation 'com.ncapdevi:frag-nav:3.2.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+
+    implementation "androidx.core:core-ktx:1.1.0"
+
     implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    kapt "com.google.dagger:dagger-compiler:2.23.1"
-
-    kapt "com.google.dagger:dagger-android-processor:2.22.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
@@ -52,7 +56,4 @@ dependencies {
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(path: ':domain')
-    implementation project(path: ':movie')
-    implementation project(path: ':data')
 }
