--- a/data/build.gradle
+++ b/data/build.gradle
@@ -30,7 +30,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':domain')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
 //    implementation 'androidx.core:core-ktx:1.1.0'
@@ -40,24 +41,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-
-
-    implementation "com.google.dagger:dagger:2.23.2"
-    implementation "com.google.dagger:dagger-android-support:2.22.1"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
-
-    kapt "com.google.dagger:dagger-compiler:2.22.1"
-    kapt "com.google.dagger:dagger-compiler:2.23.1"
-
-    kapt "com.google.dagger:dagger-android-processor:2.22.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    implementation project(path: ':domain')
 }
