--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -3,20 +3,13 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation "com.google.dagger:dagger:2.23.2"
-    implementation "com.google.dagger:dagger-android-support:2.22.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
-
-    kapt "com.google.dagger:dagger-compiler:2.22.1"
-    kapt "com.google.dagger:dagger-compiler:2.23.1"
-
-    kapt "com.google.dagger:dagger-android-processor:2.22.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 }
 
 sourceCompatibility = "7"
