--- a/movie/build.gradle
+++ b/movie/build.gradle
@@ -30,25 +30,29 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':domain')
+
+    implementation 'com.ncapdevi:frag-nav:3.2.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation "com.google.dagger:dagger:2.23.2"
-    implementation "com.google.dagger:dagger-android-support:2.22.1"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
 
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha04"
+    implementation "androidx.core:core-ktx:1.1.0"
 
-    kapt "com.google.dagger:dagger-compiler:2.23.1"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    kapt "com.google.dagger:dagger-android-processor:2.22.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
+
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(path: ':domain')
 }
