--- a/data/build.gradle
+++ b/data/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.9.3"
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
