--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
     implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.9.3"
 }
 
 sourceCompatibility = "7"
