--- a/movie/build.gradle
+++ b/movie/build.gradle
@@ -52,6 +52,12 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
